add feature to get intraday appointments records
