# src/domain/aggregates/appointment/use-cases/getIntraDayRecord/get-intraday-recordsDTO.ts
@@ -1,0 +1,20 @@
+import { DateItem } from "../getTimeSheetReport/getTimeSheetReportDTO";
+
+export interface GetIntraDayRecordInputDTO {
+    registry_number: number;
+}
+
+export interface Dates {
+    [date: string]: DateItem[];
+}
+
+export interface GetIntraDayRecordOutputDTO {
+    //hasError: boolean;
+    //message?: string;
+    registry_number: number;
+    marks: Dates;
+}
+
+export interface QueryParamsDTO {
+    paramId: number;
+}
